--- a/migration/src/main/resources/application.properties
+++ b/migration/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://${DB_HOST}/some_base
+spring.datasource.url=jdbc:postgresql://${DB_HOST}/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 spring.database.driver-class-name=org.postgresql.Driver
