Transformed api into web project, bootstrapped jooq-generated classes

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -35,6 +35,16 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-thymeleaf</artifactId>
+      <version>${spring.boot.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+      <version>${spring.boot.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.some.generic.jooq</groupId>
       <artifactId>migration</artifactId>
       <version>0.1</version>
