--- a/api/pom.xml
+++ b/api/pom.xml
@@ -25,6 +25,11 @@
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-jooq</artifactId>
+      <version>${spring.boot.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter</artifactId>
       <version>${spring.boot.version}</version>
     </dependency>
@@ -48,6 +53,7 @@
       <groupId>org.some.generic.jooq</groupId>
       <artifactId>migration</artifactId>
       <version>0.1</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.some.generic.jooq</groupId>
